2005-04-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Remove tfm_path.

2005-04-18  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/music-functions.scm (markup-expression->make-markup): fix
	bug with cons arguments of markup commands.
	(music->make-music): fix music expression property list building

2005-04-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* aclocal.m4: Massage package names.

	* SCons updates.

2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.5.20

	* lily/stem.cc (calc_stem_info): add minimum Y extent of
	stem-tremolo.  Fixes: bugs/tremolo-stem-length-beamed

	* lily/percent-repeat-engraver.cc (try_music): add measure before
	next_moment to future processing moment. Fixes:
	percent-repeat-mm-rest.ly
	(process_music): don't add moment for 2nd time.

	* input/regression/repeat-percent.ly: add mmrests as extra test.

	* lily/axis-group-engraver.cc (acknowledge_grob): read
	keepAliveInterfaces to decide what to kill.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): add
	percent-repeat-interface to keepAliveInterfaces. This fixes
	percent-repeat-harakiri.

2005-04-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SCons updates.

2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* config.make.in (TTFTOOL_ENDIAN): rm TFM_PATH

	* aclocal.m4: remove --enable-tfm-path configure option

	* input/test/ancient-font.ly (lowerStaff): clef name errors.

	* scm/backend-library.scm (postscript->png): newline after
	finishing command.

	* lily/paper-score-scheme.cc (LY_DEFINE): new file.
	(LY_DEFINE): ly:paper-score-paper-systems: new function 

	* lily/score-scheme.cc (LY_DEFINE): require music argument. 

	* lily/score.cc (default_rendering): use Music_output too.

	* input/test/chord-names-languages.ly (Module): rename file.

	* lily/text-spanner.cc: add bound-padding.

	* lily/paper-book.cc (systems): accept Paper_score
	iso. Paper_system vector. 

	* input/regression/line-arrows.ly: new file.
