@@ -1,3 +1,12 @@
+2005-04-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* buildscripts/lilypond-{login,profile}.sh (Module): remove file.
+
+2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/output-ps.scm (grob-cause): don't add cwd if path starts
+	with 
+
 2005-04-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* stepmake/aclocal.m4: Remove tfm_path.
